Renamed query value to a more generic name

--- a/dmit2015-demo/src/main/webapp/northwind/shipper/editShipper.xhtml
+++ b/dmit2015-demo/src/main/webapp/northwind/shipper/editShipper.xhtml
@@ -26,7 +26,7 @@
 	
 		<b:inputText id="queryValue" 
 			label="Search Shipper ID" 
-			value="#{shipperEditController.shipperIdQueryValue}"
+			value="#{shipperEditController.idQueryValue}"
 			placeholder="enter a shipperID to search for">
 			<b:focus></b:focus>
 		</b:inputText>
