Updated CRUD examples

--- a/dmit2015-demo/src/main/webapp/northwind/shipper/viewShippers.xhtml
+++ b/dmit2015-demo/src/main/webapp/northwind/shipper/viewShippers.xhtml
@@ -17,15 +17,13 @@
 	<ui:define name="maincontent">
 
 		<b:jumbotron>
-			<h1>All Shippers</h1>
+			<h1>List of SHIPPERS</h1>
 		</b:jumbotron>
 		
 		<b:messages id="messages"></b:messages>
 		
-		<b:form id="shippersForm">
+		<b:form id="form">
 		
-<f:verbatim>
-</f:verbatim>		
 			<b:dataTable value="#{shippers}"
 				var="currentShipper">
 				
@@ -39,8 +37,15 @@
 					value="#{currentShipper.phone}">
 				</b:dataTableColumn>
 				
+				<b:dataTableColumn label="Action">
+					<b:link outcome="editShipper"  icon-awesome="edit" icon-size="lg">
+						<f:param name="id" value="#{currentShipper.shipperID}" />
+						edit
+					</b:link>
+				</b:dataTableColumn>
 			</b:dataTable>
 			
+<f:verbatim>
 			<ui:repeat var="currentShipper" value="#{shippers}">
 				<b:row>
 					<b:panel title="#{currentShipper.companyName}">
@@ -55,6 +60,7 @@
 					</b:panel>
 				</b:row>
 			</ui:repeat>
+</f:verbatim>		
 			
 			
 		</b:form>
