--- a/dmit2015-demo/src/main/webapp/northwind/region/createRegion.xhtml
+++ b/dmit2015-demo/src/main/webapp/northwind/region/createRegion.xhtml
@@ -1,46 +1,39 @@
 <ui:composition xmlns="http://www.w3.org/1999/xhtml"
 	xmlns:f="http://xmlns.jcp.org/jsf/core"
-	xmlns:f5="http://xmlns.jcp.org/jsf/passthrough" 
+	xmlns:f5="http://xmlns.jcp.org/jsf/passthrough"
 	xmlns:h="http://xmlns.jcp.org/jsf/html"
 	xmlns:c="http://xmlns.jcp.org/jsp/jstl/core"
 	xmlns:fn="http://xmlns.jcp.org/jsp/jstl/functions"
 	xmlns:ui="http://xmlns.jcp.org/jsf/facelets"
 	xmlns:o="http://omnifaces.org/ui"
 	xmlns:of="http://omnifaces.org/functions"
-	xmlns:b="http://bootsfaces.net/ui" 
-	xmlns:p="http://primefaces.org/ui"
+	xmlns:b="http://bootsfaces.net/ui" xmlns:p="http://primefaces.org/ui"
 	xmlns:hf="http://highfaces.org"
 	template="/WEB-INF/templates/template-northwind.xhtml">
 
-	<ui:param name="title" value="Shipper - Create" />
+	<ui:param name="title" value="Region - New" />
 
 	<ui:define name="maincontent">
+		<b:jumbotron>
+			<h1>New REGION Details</h1>
+		</b:jumbotron>
 
-	<b:jumbotron>
-		<h1>New Shipper Details</h1>
-	</b:jumbotron>
+		<b:messages id="messages" />
 
-	<b:messages id="messages" />
-
-		<b:form>		
-			<b:inputText id="companyName" 
-				label="Company Name"
-				value="#{newShipper.companyName}"
-				placeholder="enter company name">
-			</b:inputText>
-	
-			<b:inputText id="phone" 
-				label="Phone"
-				value="#{newShipper.phone}"
-				placeholder="enter phone number">
+		<b:form>
+			<b:inputText id="regionDescription" 
+				label="Region Description"
+				value="#{newRegion.regionDescription}"
+				placeholder="enter region description">
+				<b:focus />
 			</b:inputText>
 			
 			<b:commandButton value="Add" 
 				icon-awesome="save"
 				look="primary"
-				actionListener="#{shipperCreateController.createNewShipper()}">
+				actionListener="#{regionCreateController.createNewRegion()}">
 			</b:commandButton>
-				
+
 		</b:form>
 
 	</ui:define>
