Updated class-level constraint

--- a/dmit2015-demo/src/main/webapp/northwind/shipper/createShipper.xhtml
+++ b/dmit2015-demo/src/main/webapp/northwind/shipper/createShipper.xhtml
@@ -35,6 +35,8 @@
 				placeholder="enter phone number">
 			</b:inputText>
 			
+			<f:validateWholeBean value="#{newShipper}" />
+			
 			<b:commandButton value="Add" 
 				icon-awesome="save"
 				look="primary"
